lab-2 init
